Add Swagger documentation with JWT authentication